# robot_simulation

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  shell.nix
examples/: map_1.json  map_2.json  map_3.json  map_4.json
include/: Settings.hpp
include/GUI/: Button.hpp  Frame.hpp  Label.hpp  MapLoader.hpp  MapManager.hpp  Settings.hpp  Window.hpp
include/GUI/Widget/: ControlsWidget.hpp  ManualRobotControlsWidget.hpp  ObstacleParametersWidget.hpp  RobotParametersWidget.hpp  SimulationControlsWidget.hpp  SpawnControlsWidget.hpp  VisualizationWidget.hpp
include/Model/: BoundingBox.hpp  IMap.hpp  Map.hpp  Obstacle.hpp  Simulation.hpp  ViewBox.hpp
include/Model/Robot/: AutonomousRobot.hpp  ManualRobot.hpp  Robot.hpp
src/: main.cpp
src/GUI/: Button.cpp  ControlsWidget.cpp  Frame.cpp  Label.cpp  MapLoader.cpp  MapManager.cpp  SimulationControlsWidget.cpp  SpawnControlsWidget.cpp  VisualizationWidget.cpp  Window.cpp
src/GUI/Widget/: ControlsWidget.cpp  ManualRobotControlsWidget.cpp  ObstacleParametersWidget.cpp  RobotParametersWidget.cpp  SimulationControlsWidget.cpp  SpawnControlsWidget.cpp  VisualizationWidget.cpp
src/Model/: BoundingBox.cpp  Map.cpp  Obstacle.cpp  Simulation.cpp  ViewBox.cpp
src/Model/Robots/: AutonomousRobot.cpp  ManualRobot.cpp  Robot.cpp
